# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")

if (is_standard_system) {
  module_output_path = "jsapi_sys/process"
}

ohos_unittest("test_process_unittest") {
  module_out_path = module_output_path

  configs = [ "//ark/js_runtime:ark_jsruntime_public_config" ]

  include_dirs = [
    "//base/compileruntime/js_sys_module/process",
    "//ark/js_runtime",
    "//foundation/ace/napi",
    "//foundation/ace/napi/interfaces/kits",
    "//foundation/ace/napi/native_engine",
    "//foundation/ace/napi/native_engine/impl/ark",
    "//third_party/bounds_checking_function/include",
    "//third_party/googletest/include",
    "//third_party/node/src",
    "//utils/native/base/include",
  ]

  cflags = [ "-g3" ]

  sources = [
    "test_ark.cpp",
    "test_process.cpp",
  ]

  deps = [
    "//ark/js_runtime:libark_jsruntime",
    "//base/compileruntime/js_sys_module/process:process_packages",
    "//foundation/ace/napi/:ace_napi",
    "//foundation/ace/napi/:ace_napi_ark",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
    "//third_party/icu/icu4c:static_icuuc",
    "//third_party/libuv:uv_static",
    "//utils/native/base:utils",
    "//utils/native/base:utilsecurec",
  ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":test_process_unittest" ]
}
